# server

./: README.md
debian/: mariadb-server-10.2.install
mysql-test/: mysql-test-run.pl
mysql-test/main/: foreign_key.result  foreign_key.test  grant.result  order_by.result  order_by.test  parser.result  parser.test  query_cache_innodb.result  union.result  union.test
mysql-test/suite/mariabackup/: incremental_backup.opt  incremental_backup.result  incremental_backup.test
plugin/auth_pam/: CMakeLists.txt
plugin/auth_pam/mapper/: pam_user_map.c
sql/: backup.cc  field.cc  field.h  filesort.cc  filesort.h  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item_geofunc.cc  key.cc  lex.h  log_event.cc  mysqld.cc  opt_range.cc  opt_subselect.cc  partition_info.cc  records.cc  records.h  sp.cc  sql_admin.cc  sql_base.cc  sql_base.h  sql_class.cc  sql_class.h  sql_cmd.h  sql_db.cc  sql_insert.cc  sql_lex.cc  sql_lex.h  sql_load.cc  sql_parse.cc  sql_reload.cc  sql_repl.cc  sql_select.cc  sql_select.h  sql_show.cc  sql_sort.h  sql_statistics.cc  sql_table.cc  (+11 more)
sql/share/: errmsg-utf8.txt
storage/innobase/btr/: btr0pcur.cc
storage/innobase/dict/: dict0crea.cc  dict0dict.cc  dict0load.cc
storage/innobase/fts/: fts0opt.cc
storage/innobase/handler/: ha_innodb.cc  ha_innodb.h  handler0alter.cc
storage/innobase/ibuf/: ibuf0ibuf.cc
storage/spider/: ha_spider.cc  ha_spider.h  spd_db_conn.cc  spd_db_conn.h  spd_db_handlersocket.cc  spd_db_handlersocket.h  spd_db_include.h  spd_db_mysql.cc  spd_db_mysql.h  spd_db_oracle.cc  spd_db_oracle.h  spd_environ.h
(+51 files in other folders)
