INCLUDE (CheckIncludeFiles)
INCLUDE (CheckFunctionExists)

CHECK_INCLUDE_FILES (security/pam_appl.h HAVE_PAM_APPL_H)
CHECK_FUNCTION_EXISTS (strndup HAVE_STRNDUP)

IF(HAVE_PAM_APPL_H)
  IF(HAVE_STRNDUP)
    ADD_DEFINITIONS(-DHAVE_STRNDUP)
  ENDIF(HAVE_STRNDUP)
  FIND_LIBRARY(PAM_LIBRARY pam)
  MYSQL_ADD_PLUGIN(auth_pam auth_pam.c LINK_LIBRARIES pam MODULE_ONLY)

  ADD_LIBRARY(pam_user_map SHARED mapper/pam_user_map.c)
  SET_TARGET_PROPERTIES(pam_user_map PROPERTIES PREFIX "")
  TARGET_LINK_LIBRARIES (pam_user_map pam)
  INSTALL(TARGETS pam_user_map DESTINATION ${INSTALL_PLUGINDIR} COMPONENT Server)
ENDIF(HAVE_PAM_APPL_H)

